--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
-    "register-service-worker": "^1.6.2",
+    "uuid": "^7.0.2",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
+    "vue-js-modal": "^1.3.33",
     "vue-router": "^3.1.5",
     "vue-select": "^3.9.1",
     "vuelidate": "^0.7.5",
